# awesome-cpp

./: .gitignore  CMakeLists.txt
algs/: bubble.cpp
basic/: conditional_inclusion.cpp  define.cpp  hello.cpp  io.cpp  readme.md
basic/namespaces/: 1.namespaces.cpp  2.namespaces.cpp  README.md
basic/operators/: arithmetic.cpp  relational.cpp
cpp11/: use_auto.cpp
patterns/strategy/: strategy.cpp
src/basic/: readme.md  vectors.cpp
src/basic/classes/: King.cpp  King.h  Person.cpp  Person.h  fun_with_classes.cpp
src/basic/etc/: funcs_and_params.cpp  palette.cpp  virtual_funcs.cpp
src/basic/flow/: if_statement.cpp
src/basic/namespaces/: 3.namespaces.cpp  README.md
src/basic/operators/: README.md
